[sm] got a lot closer to working wfc

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
-    <script src="sketch.js" defer></script>
+    <script src="tile.js" defer></script>
+    <script src="cell.js" defer></script>
+    <script src="non-rotate.js" defer></script>
 </head>
 <body></body>
 </html>
