--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
     <script src="tile.js" defer></script>
     <script src="cell.js" defer></script>
-    <script src="non-rotate.js" defer></script>
+    <script src="scratch.js" defer></script>
 </head>
 <body></body>
 </html>
