[sm] actually got wfc to work, still very buggy though

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <script src="cell.js" defer></script>
     <script src="scratch.js" defer></script>
 </head>
-<body></body>
+<body style="margin: 0"></body>
 </html>
