[sm] did a little test of hiking path generation

--- a/catdog/index.html
+++ b/catdog/index.html
@@ -14,21 +14,22 @@
 <meta property="og:url" content="https://gostugo.com/grow/">
 <meta property="og:title" content="Cat Dog - Wave Function Collapse">
 <meta property="og:description" content="Using a wave function collapse algorithm, watch the computer do its best to rotate and piece together tiles in a logical manner.">
-<meta property="og:image" content="assets/wfc_link.png">
+<meta property="og:image" content="assets/catdog_link.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://gostugo.com/grow/">
 <meta property="twitter:title" content="Cat Dog - Wave Function Collapse">
 <meta property="twitter:description" content="Using a wave function collapse algorithm, watch the computer do its best to rotate and piece together tiles in a logical manner.">
-<meta property="twitter:image" content="assets/wfc_twit.png">
+<meta property="twitter:image" content="assets/catdog_twit.png">
   <title>Cat Dog</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
   <script src="./catdog.js" defer></script>
 </head>
 <body style="background: rgb(73, 191, 238)">
+  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; position:absolute; right:5px; top: 5px; display: block; margin-left:auto; width:max-content"><a style="font-weight: bold; color:rgb(15, 15, 172)" href="/hike">check out version 3.0: hiking</a></div>
   <div id="catdog"></div>
-  <div style="font-size: 16px; margin:18px auto; max-width: 500px;">Notice this is much less likey to fail than the <a href="/grow">palm growing test</a>. It will even start over if it messes up too badly trying to connect the catdogs. It also tries its best to not have the catdogs run off the edge of the screen. I also had the idea of some pathfinding to confirm that it is a catdog then clear all the tiles that aren't a catdog. Really I could do this under the hood then just draw the catdog but I thought it was cool to see the pathfinding animated since I took so long to figure it out.</div>
+  <div style="font-size: 16px; margin:18px auto; max-width: 500px;">Notice this is much less likey to fail than the <a href="/grow">palm growing test</a>. It will even start over if it messes up too badly trying to connect the catdogs. It also tries its best to not have the catdogs run off the edge of the screen. I had the idea of some pathfinding to confirm that it is a catdog then clear all the tiles that aren't a catdog. Really I could do this under the hood then just draw the catdog but I thought it was cool to see the pathfinding visually.</div>
 </body>
 </html>
