--- a/grow/index.html
+++ b/grow/index.html
@@ -21,12 +21,13 @@
 <meta property="twitter:url" content="https://gostugo.com/grow/">
 <meta property="twitter:title" content="Grow Palms - Wave Function Collapse">
 <meta property="twitter:description" content="Using a wave function collapse algorithm, watch the computer do its best to rotate and piece together tiles in a logical manner.">
-<meta property="twitter:image" content="assets/wfc_twit.png">
+<meta property="twitter:image" content="./assets/grow_jpg">
   <title>Grow Palms</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
   <script src="./grow.js" defer></script>
 </head>
 <body style="background: rgb(186, 248, 150)">
+  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; display: block; margin-left:auto; width:max-content">check out version 2.0 <a style="font-weight: bold; color:darkblue" href="/catdog">catdog</a></div>
 </body>
 </html>
