--- a/hike/index.html
+++ b/hike/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Primary Meta Tags -->
-<title>Cat Dog - Wave Function Collapse</title>
+<title>Hike - Wave Function Collapse</title>
 <meta name="title" content="Hike - Wave Function Collapse">
 <meta name="description" content="Using a wave function collapse algorithm, watch the computer do its best to rotate and piece together tiles in a logical manner.">
 
@@ -19,7 +19,7 @@
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://gostugo.com/hike/">
-<meta property="twitter:title" content="Cat Dog - Wave Function Collapse">
+<meta property="twitter:title" content="Hike - Wave Function Collapse">
 <meta property="twitter:description" content="Using a wave function collapse algorithm, watch the computer do its best to rotate and piece together tiles in a logical manner.">
 <meta property="twitter:image" content="assets/hike_link.png">
   <title>Hike - Wave Function Collapse</title>
