[sm] moved around the folder structure, not sure if I love it

--- a/wfc/catdog/index.html
+++ b/wfc/catdog/index.html
@@ -28,8 +28,8 @@
   <script src="./catdog.js" defer></script>
 </head>
 <body style="background: rgb(73, 191, 238)">
-  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; position:absolute; right:5px; top: 5px; display: block; margin-left:auto; width:max-content"><a style="font-weight: bold; color:rgb(15, 15, 172)" href="/hike">check out version 3.0: hiking</a></div>
+  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; position:absolute; right:5px; top: 5px; display: block; margin-left:auto; width:max-content"><a style="font-weight: bold; color:rgb(15, 15, 172)" href="/wfc/hike">check out version 3.0: hiking</a></div>
   <div id="catdog"></div>
-  <div style="font-size: 16px; margin:18px auto; max-width: 500px;">Notice this is much less likey to fail than the <a href="/grow">palm growing test</a>. It will even start over if it messes up too badly trying to connect the catdogs. It also tries its best to not have the catdogs run off the edge of the screen. I had the idea of some pathfinding to confirm that it is a catdog then clear all the tiles that aren't a catdog. Really I could do this under the hood then just draw the catdog but I thought it was cool to see the pathfinding visually.</div>
+  <div style="font-size: 16px; margin:18px auto; max-width: 500px;">Notice this is much less likey to fail than the <a href="/wfc/grow">palm growing test</a>. It will even start over if it messes up too badly trying to connect the catdogs. It also tries its best to not have the catdogs run off the edge of the screen. I had the idea of some pathfinding to confirm that it is a catdog then clear all the tiles that aren't a catdog. Really I could do this under the hood then just draw the catdog but I thought it was cool to see the pathfinding visually.</div>
 </body>
 </html>
