--- a/wfc/grow/index.html
+++ b/wfc/grow/index.html
@@ -28,6 +28,6 @@
   <script src="./grow.js" defer></script>
 </head>
 <body style="background: rgb(186, 248, 150)">
-  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; display: block; margin-left:auto; width:max-content">check out version 2.0 <a style="font-weight: bold; color:darkblue" href="/catdog">catdog</a></div>
+  <div style="margin-bottom: 12px; color: rgb(5, 24, 5); font-family: monospace; display: block; margin-left:auto; width:max-content">check out version 2.0 <a style="font-weight: bold; color:darkblue" href="/wfc/catdog">catdog</a></div>
 </body>
 </html>
