--- a/CC_30/index.html
+++ b/CC_30/index.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Phyllotaxis</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
   <script src="cc_30.js" defer></script>
 </head>
 <body>
-  <button style="background: white; display:block; margin: 40px auto;">start</button>
+  <div class="ctr-panel">
+    <button class="btn-start" style="display:block; border-radius: 10px; padding: 2px 8px">start</button>
+    <div class="slider-wrapper">
+      <label style="font-size: 12px;" for="angle">angle</label>
+      <input id="angle" type="range" min="1350" max="1380" value="1375">
+    </div>
+    <div class="slider-wrapper">
+      <label style="font-size: 12px;" for="rate">rate</label>
+      <input id="rate" type="range" min="0" max="1500" value="1000">
+    </div>
+  </div>
+
 </body>
 </html>
