[sm] built out grid for snake game and dealt with some color issues, created snake classlike function

--- a/cc/003_snake/index.html
+++ b/cc/003_snake/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
+  <script src="./snake.js" defer></script>
+  <script src="./snakeGame.js" defer></script>
+  <title>Snake Game</title>
 </head>
-<body>
-  
+<body style="background: rgb(55,55,55);">
+    <div id="canvas-parent"></div>
 </body>
 </html>
