[sm] lots of work on snake game

--- a/cc/002_menger_sponge_fractal/index.html
+++ b/cc/002_menger_sponge_fractal/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js" defer></script>
   <script src="script.js"></script>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Menger Sponge Fractal</title>
 </head>
 <body style="background: rgb(51,51,51)">
