--- a/grand-hotel/index.html
+++ b/grand-hotel/index.html
@@ -21,9 +21,22 @@
 </html>
 
 <style>
+  body, html {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+  }
+  .hud-wrapper {
+    top: 10px;
+    left: 10px;
+    position: absolute;
+  }
+
   #canvas-wrapper {
-    margin: 25px auto 0;
-    border:3px solid red;
+    margin: 0 auto;
+    /* border:3px solid red; */
     width:min-content;
     height: min-content;
   }
