--- a/grand-hotel/index.html
+++ b/grand-hotel/index.html
@@ -19,7 +19,12 @@
     <button id="redraw">redraw</button>
     <button id="full-cycle">full cycle</button> -->
   </div>
-  <div id="canvas-wrapper"></div>
-  <div class="ground"></div>
+  <div class="container">
+    <div class="hotel-wrapper">
+      <div id="canvas-wrapper"></div>
+      <div class="lobby"></div>
+    </div>
+    <div class="ground"></div>
+  </div>
 </body>
 </html>
