[sm] brought gui back and started to style etc

--- a/waves/index.html
+++ b/waves/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js" integrity="sha512-WoO4Ih0CDOSLYafy22wZD/mcJ7k0ESLqtQsFa6zFKnEUrbtuGU+GkLtVhgt93xa2qewG5gKEC6CWlN8OaCTSVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="waves.css">
   <script src="./waves.classes.js" defer></script>
   <script src="./waves.js" defer></script>
   <title>Waves</title>
 </head>
 <body>
   <canvas id="sin-wave"></canvas>
-  <canvas id="draw-wave"></canvas>
-  <canvas id="show-wave"></canvas>
 </body>
 </html>
